# mapreduce-cluster

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HELPER.md  README.md  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json
docker/: Dockerfile  Dockerfile.windows
lib/: client.hpp  frame.hpp  server.hpp  tcp.hpp
src/: client_main.cpp  main.cpp  server_main.cpp
